--- a/chaiAurJavascript/projectsLecture35/1_colorChanger/index.html
+++ b/chaiAurJavascript/projectsLecture35/1_colorChanger/index.html
@@ -10,11 +10,15 @@
   <body>
     <div class="canvas">
       <h1>Color Scheme Switcher</h1>
+      <div class="subCanvas">
       <span class="button" id="grey"></span>
       <span class="button" id="white"></span>
       <span class="button" id="blue"></span>
       <span class="button" id="yellow"></span>
-      <span class="button" id="purple"></span>
+      </div>
+      <h3>Create your own block</h3>
+      <input type="text" name="button" id="create">
+      <button id="createbu">Submit</button>
       <h2>
         Try clicking on one of the colors above
         <span>to change the background color of this page!</span>
